--- a/primesUntil/primesUntil.vcxproj
+++ b/primesUntil/primesUntil.vcxproj
@@ -169,6 +169,9 @@
   <ItemGroup>
     <ClCompile Include="primesUntil.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\primes.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
